sobre nosotros, espacio para  miembros agregado

--- a/vistas/publico/detalle_zapato.html
+++ b/vistas/publico/detalle_zapato.html
@@ -709,7 +709,7 @@
                 <!--*Slider de recomendados-->
                 <h1 class="titillium-web-regular text35 mx-5 text-black mt-3 mb-1"> También podría gustarte</h1>
                 <div class="containerCards d-flex flex-nowrap">
-                    <div class="card col-4" id="cardC">
+                    <div class="card col-4 cardC">
                         <a href="/vistas/publico/detalle_zapato.html" class="text15">
                             <div class="image-wrapper2">
                                 <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
@@ -737,7 +737,7 @@
                         </a>
                     </div>
 
-                    <div class="card col-4" id="cardC">
+                    <div class="card col-4 cardC">
                         <a href="/vistas/publico/detalle_zapato.html" class="text15">
                             <div class="image-wrapper2">
                                 <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
@@ -765,7 +765,7 @@
                         </a>
                     </div>
 
-                    <div class="card col-4" id="cardC">
+                    <div class="card col-4 cardC">
                         <a href="/vistas/publico/detalle_zapato.html" class="text15">
                             <div class="image-wrapper2">
                                 <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
@@ -793,7 +793,7 @@
                         </a>
                     </div>
 
-                    <div class="card col-4" id="cardC">
+                    <div class="card col-4 cardC">
                         <a href="/vistas/publico/detalle_zapato.html" class="text15">
                             <div class="image-wrapper2">
                                 <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
