--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -156,7 +156,7 @@ TODO importante // realtando algo
         <!--*Slider de colección más reciente-->
         <h1 class="titillium-web-regular text35 mx-5 text-black mt-3">Nuestra colección más reciente</h1>
         <div class="containerCards d-flex flex-nowrap">
-            <div class="card col-4" id="cardC">
+            <div class="card col-4 cardC">
                 <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
                         <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
@@ -184,7 +184,7 @@ TODO importante // realtando algo
                 </a>
             </div>
 
-            <div class="card col-4" id="cardC">
+            <div class="card col-4 cardC">
                 <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
                         <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
@@ -212,7 +212,7 @@ TODO importante // realtando algo
                 </a>
             </div>
 
-            <div class="card col-4" id="cardC">
+            <div class="card col-4 cardC">
                 <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
                         <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
@@ -240,7 +240,7 @@ TODO importante // realtando algo
                 </a>
             </div>
 
-            <div class="card col-4" id="cardC">
+            <div class="card col-4 cardC">
                 <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
                         <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
@@ -274,7 +274,7 @@ TODO importante // realtando algo
         <!--*Slider de seleccion especial-->
         <h1 class="titillium-web-regular text35 mx-5 text-black mt-3">Selección especial de nuestro equipo</h1>
         <div class="containerCards d-flex flex-nowrap">
-            <div class="card col-4" id="cardC">
+            <div class="card col-4 cardC">
                 <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
                         <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
@@ -302,7 +302,7 @@ TODO importante // realtando algo
                 </a>
             </div>
 
-            <div class="card col-4" id="cardC">
+            <div class="card col-4 cardC">
                 <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
                         <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
@@ -330,7 +330,7 @@ TODO importante // realtando algo
                 </a>
             </div>
 
-            <div class="card col-4" id="cardC">
+            <div class="card col-4 cardC">
                 <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
                         <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
@@ -358,7 +358,7 @@ TODO importante // realtando algo
                 </a>
             </div>
 
-            <div class="card col-4" id="cardC">
+            <div class="card col-4 cardC">
                 <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
                         <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
