--- a/vistas/publico/sobre_nosotros.html
+++ b/vistas/publico/sobre_nosotros.html
@@ -36,25 +36,21 @@ TODO importante // realtando algo
         <div class="containerTotal d-flex flex-column col-lg-12 col-12 position-relative z-3">
             <div class="triangulo position-absolute z-0"></div>
             <div class="containerHeader bg-color-1blue d-flex flex-column justify-content-center">
-                <div class="containerTitle d-flex flex-column align-items-center position-relative">
+                <div class="d-flex flex-column align-items-center position-relative">
                     <h1 class="text-white titillium-web-bold">
                         Sobre Nosotros
                     </h1>
-                    <p class="text-white titillium-web-regular mb-5">
+                    <p class="text-white titillium-web-regular mb-5 px-2">
                         Conoce nuestra misiòn visiòn, y a los miembros que hicieron posible este trabajo
                     </p>
-                    <div class="lineab1 titillium-web-regular col-9"></div>
+                    <div class="lineab1 titillium-web-regular col-lg-9 col-md-10 col-sm-11 col-11"></div>
                 </div>
             </div>
 
-            <div class="containerHoWeAre d-flex flex-row justify-content-center col-12 mt-5 mb-5">
-
-                <div class="containerImg col-4">
-                    <img src="/recursos/imagenes/shoeBlue.svg">
-                </div>
+            <div class="containerHoWeAre d-flex flex-row justify-content-end col-12 mt-5 mb-5 p-2">
 
                 <div
-                    class="containerText col-8 m-0 p-0 justify-content-center align-items-center align-content-center d-flex flex-column">
+                    class="col-10 offset-col-sm-2 m-0 px-4 justify-content-center align-items-center align-content-center d-flex flex-column mt-3 mb-3">
                     <h2 class="text-black titillium-web-bold mb-4 titleWho">
                         Quienes Somos
                     </h2>
@@ -76,16 +72,63 @@ TODO importante // realtando algo
                 </div>
             </div>
 
-            <div class="containerMembers d-flex flex-row bg-color-1blue pt-5 pb-5 col-12">
-                <div class="member1 d-flex flex-column col-3 mx-2">
-                    <div class="imgUser">
-                        <img src="/recursos/imagenes/imgMmbr.svg">
+            <div
+                class="containerMembers d-flex flex-row flex-wrap justify-content-center bg-color-1blue pt-5 pb-5 col-12">
+
+
+
+                <div class="d-flex flex-column mx-3 text-center mmbr col-12 col-lg-3 col-md-5 col-sm-12 p-3">
+                    <div>
+                        <img src="/recursos/imagenes/imgMmbr.svg" class="imguser">
                     </div>
 
                     <div class="containerTextMmber">
-
+                        <h2 class="text-white titillium-web-regular">Adriana Mejía</h2>
+                        <p class="text-white titillium-web-regular text-align-center mt-3">
+                            Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra lacus
+                            porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla cras
+                            placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
+                            augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
+                            vehicula leo nascetur venenatis ultrici
+                        </p>
                     </div>
                 </div>
+
+                <div class="d-flex flex-column mx-3 text-center mmbr col-12 col-lg-3 col-md-5 col-sm-12 p-3">
+                    <div>
+                        <img src="/recursos/imagenes/imgMmbr.svg" class="imguser">
+                    </div>
+
+                    <div class="containerTextMmber">
+                        <h2 class="text-white titillium-web-regular">Adriana Mejía</h2>
+                        <p class="text-white titillium-web-regular text-align-center mt-3">
+                            Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra lacus
+                            porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla cras
+                            placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
+                            augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
+                            vehicula leo nascetur venenatis ultrici
+                        </p>
+                    </div>
+                </div>
+
+                <div class="d-flex flex-column mx-3 text-center mmbr col-12 col-lg-3 col-md-5 col-sm-12 p-3">
+                    <div>
+                        <img src="/recursos/imagenes/imgMmbr.svg" class="imguser">
+                    </div>
+
+                    <div class="containerTextMmber">
+                        <h2 class="text-white titillium-web-regular">Adriana Mejía</h2>
+                        <p class="text-white titillium-web-regular text-align-center mt-3">
+                            Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra lacus
+                            porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla cras
+                            placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
+                            augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
+                            vehicula leo nascetur venenatis ultrici
+                        </p>
+                    </div>
+                </div>
+
+
             </div>
 
         </div>
