sobre nosotros, contenedores de mision, vision, valores y comienzo echos

--- a/vistas/publico/sobre_nosotros.html
+++ b/vistas/publico/sobre_nosotros.html
@@ -48,7 +48,6 @@ TODO importante // realtando algo
             </div>
 
             <div class="containerHoWeAre d-flex flex-row justify-content-end col-12 mt-5 mb-5 p-2">
-
                 <div
                     class="col-10 offset-col-sm-2 m-0 px-4 justify-content-center align-items-center align-content-center d-flex flex-column mt-3 mb-3">
                     <h2 class="text-black titillium-web-bold mb-4 titleWho">
@@ -75,8 +74,6 @@ TODO importante // realtando algo
             <div
                 class="containerMembers d-flex flex-row flex-wrap justify-content-center bg-color-1blue pt-5 pb-5 col-12">
 
-
-
                 <div class="d-flex flex-column mx-3 text-center mmbr col-12 col-lg-3 col-md-5 col-sm-12 p-3">
                     <div>
                         <img src="/recursos/imagenes/imgMmbr.svg" class="imguser">
@@ -127,7 +124,22 @@ TODO importante // realtando algo
                         </p>
                     </div>
                 </div>
+            </div>
 
+            <div class="containerMVVN d-flex flex-column col-12">
+                <div class="r1 d-flex flex-row flex-wrap justify-content-between col-12 mb-5">
+                    <div class="containerMision col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm">
+                    </div>
+                    <div class="containerVision col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm">
+                    </div>
+                </div>
+
+                <div class="r2 d-flex flex-row flex-wrap justify-content-between col-12 mt-5">
+                    <div class="containerValores col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm">
+                    </div>
+                    <div class="containerComienzo col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm">
+                    </div>
+                </div>
 
             </div>
 
