sobre nosotros finalizado

--- a/vistas/publico/sobre_nosotros.html
+++ b/vistas/publico/sobre_nosotros.html
@@ -80,7 +80,7 @@ TODO importante // realtando algo
                     </div>
 
                     <div class="containerTextMmber">
-                        <h2 class="text-white titillium-web-regular">Adriana Mejía</h2>
+                        <h2 class="text-white titillium-web-regular mt-2">Adriana Mejía</h2>
                         <p class="text-white titillium-web-regular text-align-center mt-3">
                             Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra lacus
                             porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla cras
@@ -97,7 +97,7 @@ TODO importante // realtando algo
                     </div>
 
                     <div class="containerTextMmber">
-                        <h2 class="text-white titillium-web-regular">Adriana Mejía</h2>
+                        <h2 class="text-white titillium-web-regular mt-2">Adriana Mejía</h2>
                         <p class="text-white titillium-web-regular text-align-center mt-3">
                             Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra lacus
                             porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla cras
@@ -114,7 +114,7 @@ TODO importante // realtando algo
                     </div>
 
                     <div class="containerTextMmber">
-                        <h2 class="text-white titillium-web-regular">Adriana Mejía</h2>
+                        <h2 class="text-white titillium-web-regular mt-2">Adriana Mejía</h2>
                         <p class="text-white titillium-web-regular text-align-center mt-3">
                             Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra lacus
                             porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla cras
@@ -127,22 +127,93 @@ TODO importante // realtando algo
             </div>
 
             <div class="containerMVVN d-flex flex-column col-12">
-                <div class="r1 d-flex flex-row flex-wrap justify-content-between col-12 mb-5">
-                    <div class="containerMision col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm">
+                <div class="r1 d-flex flex-row flex-wrap col-12 mb-5 ">
+                    <div
+                        class="containerMision col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm d-flex flex-column justify-content-center align-items-center">
+                        <div class="col-12 text-center cntnrtxt">
+                            <h2 class="titillium-web-regular ">
+                                Misión
+                            </h2>
+                            <p class="titillium-web-regular">
+                                Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra
+                                lacus
+                                porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla
+                                cras
+                                placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
+                                augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
+                                vehicula leo nascetur venenatis ultriciLorem ipsum dolor sit amet consectetur,
+                                adipiscing
+                                elit etiam habitasse. Justo nostra lacus porttitor convallis nisi habitasse commodo
+                                vehicula
+                                turpis praesent, sagittis fringilla cras p
+                            </p>
+                        </div>
                     </div>
                     <div class="containerVision col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm">
+                        <div class="col-12 text-center cntnrtxt">
+                            <h2 class="titillium-web-regular">
+                                Visión
+                            </h2>
+                            <p class="titillium-web-regular">
+                                Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra
+                                lacus
+                                porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla
+                                cras
+                                placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
+                                augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
+                                vehicula leo nascetur venenatis ultriciLorem ipsum dolor sit amet consectetur,
+                                adipiscing
+                                elit etiam habitasse. Justo nostra lacus porttitor convallis nisi habitasse commodo
+                                vehicula
+                                turpis praesent, sagittis fringilla cras p
+                            </p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="r2 d-flex flex-row flex-wrap justify-content-between col-12 mt-5">
+                <div class="r2 d-flex flex-row flex-wrap justify-content-between col-12">
                     <div class="containerValores col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm">
+                        <div class="col-12 text-center cntnrtxt">
+                            <h2 class="titillium-web-regular">
+                                Valores
+                            </h2>
+                            <p class="titillium-web-regular">
+                                Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra
+                                lacus
+                                porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla
+                                cras
+                                placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
+                                augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
+                                vehicula leo nascetur venenatis ultriciLorem ipsum dolor sit amet consectetur,
+                                adipiscing
+                                elit etiam habitasse. Justo nostra lacus porttitor convallis nisi habitasse commodo
+                                vehicula
+                                turpis praesent, sagittis fringilla cras p
+                            </p>
+                        </div>
                     </div>
                     <div class="containerComienzo col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm">
+                        <div class="col-12 text-center cntnrtxt">
+                            <h2 class="titillium-web-regular">
+                                Nuestro Comienzo
+                            </h2>
+                            <p class="titillium-web-regular">
+                                Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra
+                                lacus
+                                porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla
+                                cras
+                                placerat porta nullam diam conubia ac, dapibus gravida inceptos quisque congue vulputate
+                                augue primis phasellus. Imperdiet fermentum orci velit auctor eros luctus sociis, cursus
+                                vehicula leo nascetur venenatis ultriciLorem ipsum dolor sit amet consectetur,
+                                adipiscing
+                                elit etiam habitasse. Justo nostra lacus porttitor convallis nisi habitasse commodo
+                                vehicula
+                                turpis praesent, sagittis fringilla cras p
+                            </p>
+                        </div>
                     </div>
                 </div>
-
             </div>
-
         </div>
     </main>
 
