detallitos sobre nosotros bg azul

--- a/vistas/publico/sobre_nosotros.html
+++ b/vistas/publico/sobre_nosotros.html
@@ -126,10 +126,10 @@ TODO importante // realtando algo
                 </div>
             </div>
 
-            <div class="containerMVVN d-flex flex-column col-12">
+            <div class="containerMVVN d-flex flex-column col-12 bg-color-1blue">
                 <div class="r1 d-flex flex-row flex-wrap col-12 mb-5 ">
                     <div
-                        class="containerMision col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm d-flex flex-column justify-content-center align-items-center">
+                        class="containerMision col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm d-flex flex-column justify-content-center align-items-center bg-color-white">
                         <div class="col-12 text-center cntnrtxt">
                             <h2 class="titillium-web-regular ">
                                 Misión
@@ -149,7 +149,7 @@ TODO importante // realtando algo
                             </p>
                         </div>
                     </div>
-                    <div class="containerVision col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm">
+                    <div class="containerVision col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm bg-color-white">
                         <div class="col-12 text-center cntnrtxt">
                             <h2 class="titillium-web-regular">
                                 Visión
@@ -172,7 +172,7 @@ TODO importante // realtando algo
                 </div>
 
                 <div class="r2 d-flex flex-row flex-wrap justify-content-between col-12">
-                    <div class="containerValores col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm">
+                    <div class="containerValores col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm bg-color-white">
                         <div class="col-12 text-center cntnrtxt">
                             <h2 class="titillium-web-regular">
                                 Valores
@@ -192,7 +192,7 @@ TODO importante // realtando algo
                             </p>
                         </div>
                     </div>
-                    <div class="containerComienzo col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm">
+                    <div class="containerComienzo col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm bg-color-white">
                         <div class="col-12 text-center cntnrtxt">
                             <h2 class="titillium-web-regular">
                                 Nuestro Comienzo
