--- a/vistas/publico/sobre_nosotros.html
+++ b/vistas/publico/sobre_nosotros.html
@@ -91,7 +91,8 @@ TODO importante // realtando algo
                     </div>
                 </div>
 
-                <div class="d-flex flex-column mx-3 text-center mmbr col-12 col-lg-3 col-md-5 col-sm-12 p-3">
+                <div
+                    class="d-flex flex-column mx-3 text-center mmbr col-12 col-lg-3 col-md-5 col-sm-12 p-3 position-relative">
                     <div>
                         <img src="/recursos/imagenes/imgMmbr.svg" class="imguser">
                     </div>
@@ -106,9 +107,12 @@ TODO importante // realtando algo
                             vehicula leo nascetur venenatis ultrici
                         </p>
                     </div>
+
+                    <div class="lineah1"></div>
                 </div>
 
-                <div class="d-flex flex-column mx-3 text-center mmbr col-12 col-lg-3 col-md-5 col-sm-12 p-3">
+                <div
+                    class="d-flex flex-column mx-3 text-center mmbr col-12 col-lg-3 col-md-5 col-sm-12 p-3 position-relative">
                     <div>
                         <img src="/recursos/imagenes/imgMmbr.svg" class="imguser">
                     </div>
@@ -123,6 +127,7 @@ TODO importante // realtando algo
                             vehicula leo nascetur venenatis ultrici
                         </p>
                     </div>
+                    <div class="lineah2"></div>
                 </div>
             </div>
 
