Diseño terminado de la busqueda ;D

--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -132,6 +132,16 @@
                     </div>
                     <div class="tab-pane1 fade z-2 position-relative d-none" role="tabpanel" id="tabla"
                         aria-labelledby="tabla-tab">
+
+                        <div class="col-lg-10 col-md-8">
+                            <div class="search-container me-5">
+                                <input type="search" class="form-control" name="search" placeholder="Buscar....."
+                                    id="buscadorInputPedidos" required>
+                                <span class="search-icon"><i class="bi bi-search"></i></span>
+                                <span class="clear-icon" onclick="clearSearch()"><i class="bi clear-icon"></i></span>
+                            </div>
+                        </div>
+
                         <div class="Contenedor-tabla z-3 mt-5 table-responsive">
                             <table class="table table-hover table-bordered" id="tablaTrabajadores">
                                 <thead class="thead">
