--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -348,91 +348,46 @@
                                     <h1 class="modal-title fs-5 text-start" id="modalTitleT"></h1>
                                 </div>
                                 <!-- Formulario para crear o actualizar un registro -->
-                                <form id="tallasForm" name="tallasForm">
-                                    <div class="modal-body row g-3 d-flex flex-column align-items-start">
-                                        <!-- Campo de tallas -->
-                                        <div class="row-sm-4 row-md-4">
-                                            <div class="ContenedorA row-sm-10 row-md-10">
-                                                <button type="button" id="agregarBtn"
-                                                class="btn-primary btnA ms-1 titillium-web-regular"
-                                                onclick="botonCancelar()">
-                                                +</button>
-                                                <label for="tallas" class="labelT ps-3 titillium-web-semibold">Tallas</label>
-                                            </div>
-                                            <div class="ContenedorTotalT d-flex flex-row col-12">           
-                                                <div class="tallasScroll mt-2 ms-4 d-flex flex-column col-6">
-                                                    <div class="contenedorFilaTallas d-flex flex-row flex-wrap">
-                                                        <div class="cuadradoTalla">
-                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
-                                                                5
-                                                            </h5>
-                                                        </div>
-                                                        <div class="cuadradoTalla">
-                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
-                                                                30
-                                                            </h5>
-                                                        </div>
-                                                        <div class="cuadradoTalla">
-                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
-                                                                30
-                                                            </h5>
-                                                        </div>  
-                                                        <div class="cuadradoTalla">
-                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
-                                                                30
-                                                            </h5>
-                                                        </div>
-                                                        <div class="cuadradoTalla">
-                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
-                                                                30
-                                                            </h5>
-                                                        </div>
-                                                        <div class="cuadradoTalla">
-                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
-                                                                30
-                                                            </h5>
-                                                        </div>
-                                                        <div class="cuadradoTalla">
-                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
-                                                                30
-                                                            </h5>
-                                                        </div>
-                                                        <div class="cuadradoTalla">
-                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
-                                                                30
-                                                            </h5>
-                                                        </div>
-                                                        <div class="cuadradoTalla">
-                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
-                                                                30
-                                                            </h5>
-                                                        </div>
-                                                        <div class="cuadradoTalla">
-                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
-                                                                30
-                                                            </h5>
-                                                        </div>
-                                                        <div class="cuadradoTalla">
-                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
-                                                                30
-                                                            </h5>
-                                                        </div>
-                                                        <div class="cuadradoTalla">
-                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
-                                                                30
-                                                            </h5>
-                                                        </div>
-                                                        <div class="cuadradoTalla">
-                                                            <h5 class="titillium-web-regular m-0 p-1 text-center">
-                                                                30
-                                                            </h5>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="d-flex flex-column col-6 as">
-                                                </div>
-                                            </div>
-                                        </div>
+                                <div class="ContenedorTabla">
+                                    <table class="tablaTallas">
+                                        <thead>
+                                            <tr>
+                                                <th>N°</th>
+                                                <th>Talla</th>
+                                                <th>Stock Actual</th>
+                                                <th>Ingreso de Datos</th>
+                                                
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td data-labelN="N°">01</td>
+                                                <td data-labelT="Talla">01</td>
+                                                <td data-labelS="Stock Actual">01</td>
+                                                <td> <button> </button></td>
+                                            </tr>
+                                            <tr>
+                                                <td data-labelN="N°">01</td>
+                                                <td data-labelT="Talla">01</td>
+                                                <td data-labelS="Stock Actual">01</td>
+                                                <td> <button> </button></td>
+                                            </tr>
+                                            <tr>
+                                                <td data-labelN="N°">01</td>
+                                                <td data-labelT="Talla">01</td>
+                                                <td data-labelS="Stock Actual">01</td>
+                                                <td> <button> </button></td>
+                                            </tr>
+                                            <tr>
+                                                <td data-labelN="N°">01</td>
+                                                <td data-labelT="Talla">01</td>
+                                                <td data-labelS="Stock Actual">01</td>
+                                                <td> <button> </button></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+
+                                </div>
                                         <!-- Botones en el pie del modal -->
                                         <div class="modal-footer mt-5 d-flex justify-content-center align-items-center">
                                             <div class="contenedorBotones3">
